Material Exporter v0.1 Alpha

--- a/material_exporter/MANUAL.html
+++ b/material_exporter/MANUAL.html
@@ -1,31 +1,31 @@
-# Material Exporter
-## Brief
+<h1>Material Exporter</h1>
+<h2>Brief</h2>
 Thank you for downloading Mr. Jed's Material Exporter. This docker is
 intended to help Krita users export many layers at a time into a
 specific folder structure to help organizing materials.
 -- Mr Jed
-## How To
-### Basics
+<h2>How To </h2>
+<h3>Basics</h3>
 This plugin intends to be working with the corresponding `.kra` that
 has been provided with this repository.
-
-
+<br>
+<br>
 It exports the first level layer groups that have:
 	- at least one child layer
 	- is named one of: ['alb', 'ao', 'mtl', 'rgh', 'emi']
-
-
+	<br>
+	<br>
 	The `.kra` file provided contains layer-groups with these names as well
 	as a default black background.
-###  Exporting
+<h3> Exporting</h3>
 There are 3 fields to fill in.
-
-
+<br>
+<br>
 1. Base Path
 Point to the project folder you are working in.
-
+<br>
 2. Model
 A name of an existing folder within the base path. The Material Exporter does not create folders that do not exist in hopes of keeping cleaner projects.
-
+<br>
 3. Material
 A name of the material you are working. Once again you are required to create the folder initially.
